@@ -8,22 +8,16 @@
         <version>1.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <version>1.4-java20-SNAPSHOT</version>
 
     <artifactId>docean</artifactId>
 
     <properties>
-        <netty.version>4.1.48.Final</netty.version>
+        <netty.version>4.1.97.Final</netty.version>
     </properties>
 
     <dependencies>
 
-
-<!--        <dependency>-->
-<!--            <groupId>io.netty</groupId>-->
-<!--            <artifactId>netty-tcnative-boringssl-static</artifactId>-->
-<!--            <version>2.0.61.Final</version>-->
-<!--            <classifier>osx-aarch_64</classifier>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>run.mone</groupId>
@@ -56,22 +50,44 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.mortbay.jetty.alpn/alpn-boot -->
-<!--        <dependency>-->
-<!--            <groupId>org.mortbay.jetty.alpn</groupId>-->
-<!--            <artifactId>alpn-boot</artifactId>-->
-<!--            <version>8.1.13.v20181017</version>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.concurrent</arg>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <compilerVersion>20</compilerVersion>
+                    <source>20</source>
+                    <target>20</target>
+                </configuration>
+            </plugin>
+
+
+        </plugins>
+
+
+    </build>
+
 
 </project>
